--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -9,6 +9,8 @@
   box-shadow: 0 0 20px 10px rgb(0 0 0 / 10%);
   overflow: hidden;
   padding-bottom: 1rem;
+  position: relative;
+  z-index: 0;
 }
 
 .list {
@@ -75,7 +77,7 @@
   height: 28px;
   z-index: 1;
   background: #f5f5f5;
-  border-radius: 50%;
+  border-radius: 4px;
   margin-right: 4px;
   cursor: pointer;
   color: var(--rc-float-menu-theme-primary);
